clusters/cloudydad/apps/nix-dev/app/nix-dev-ssh-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nix-dev-ssh
  labels:
    app: nix-dev-env
  namespace: nix-dev
spec:
  type: LoadBalancer
  selector:
    app: nix-dev-env
  ports:
    - port: 2222
      targetPort: 2222
      name: ssh
      protocol: TCP
