clusters/cloudydad/apps/nix-dev/app/nix-dev-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nix-dev-ingress
  namespace: nix-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: authentik@kubernetes-system
spec:
  ingressClassName: traefik
  rules:
    - host: dev.cloudydad.world
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nix-dev-env
                port:
                  number: 8080
  tls:
    - secretName: nix-dev-tls #pragma: allowlist secret
